--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,19 +4,34 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/editText1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:hint="@string/editText1"
-        android:text="alamakota" />
-
-    <Button
-        android:id="@+id/button1"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="sendMessage"
-        android:text="@string/button_send" />
+        android:layout_height="match_parent"
+        android:layout_weight="1.02"
+        android:orientation="vertical" >
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="sendMessage"
+            android:text="@string/button1_send" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="refreshFillData"
+            android:text="@string/button2_send" />
+
+        <TextView
+            android:id="@+id/TextView1"
+            android:layout_width="fill_parent"
+            android:layout_height="68dp"
+            android:layout_weight="0.47"
+            android:hint="@string/TextView1Hint"
+            android:text="alamakota" />
+
+    </LinearLayout>
 
 </LinearLayout>
